--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-
-requests 
-click
+beautifulsoup4==4.11.1
+build==0.8.0
+certifi==2022.6.15
+charset-normalizer==2.1.0
+click==8.1.3
+idna==3.3
+lxml==4.9.1
+packaging==21.3
+pep517==0.12.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+requests==2.28.1
+six==1.16.0
+soupsieve==2.3.2.post1
+tomli==2.0.1
+urllib3==1.26.10
